# gocache

./: .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  go.mod  go.sum  grafana-dashboard.json  prometheus.yml
.github/workflows/: ci.yml
benchmarks/: run_benchmark.sh
benchmarks/results/: benchmark_20260219_140931.txt
cmd/client/: main.go
cmd/configs/: config-node1.yaml  config-node2.yaml  config-node3.yaml  config-node4.yaml
cmd/server/: cache.aof  cluster_commands.go  config-node1.yaml  config-node2.yaml  config-node3.yaml  config.yaml  config_test.go  handler.go  main.go  metrics_server.go  recovery.go  server.go  state.go
demo/: cluster_client_demo.go
docs/: BENCHMARK.md  BENCHMARKS.md  api.md  configuration.md  deployment.md
internal/cache/: cache.go  cache_benchmark_test.go  cache_test.go  enumeration.go
internal/cluster/: config.go  hash.go  hash_test.go  health.go  health_test.go  migration.go  migration_test.go  migrator.go  transfer.go  trasnfer.go
internal/config/: config.go
internal/logger/: logger.go
internal/lru/: lru.go  lru_test.go
internal/metrics/: metrics.go
internal/persistence/: aof.go  aof_benchmark_test.go  recovery.go  snapshot.go
internal/pubsub/: pubsub.go  pubsub_test.go
internal/replication/: follower.go  leader.go  protocol.go  (+1 more)
pkg/client/python/: README.md  client.py  examples.py  pyproject.toml  test_client.py
pkg/client/python/gocache/: __init__.py  client.py
pkg/client/python/tests/: test_client.py
tests/: load_test.go  redirect_test.go  test_helpers.go  test_keys.go
(+17 files in other folders)
