[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gocache"
version = "0.1.1"
description = "Python client library for GoCache — a Redis-compatible in-memory cache server"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

authors = [
  { name = "Eric Kim", email = "seyoon2006@gmail.com" }
]

keywords = ["cache", "redis", "resp", "gocache", "client"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/erickim73/gocache"
Repository = "https://github.com/erickim73/gocache"
Issues = "https://github.com/erickim73/gocache/issues"